* Added: 'range' attribute to <txp:article_image />.
* Added: Expanded conditional 'match' attribute with comparison operators.
* Accessibility: Additional 'aria-label' attributes for various internal links.
* Internal: Removed FOUND_ROWS() which is deprecated in MySQL 8.0.17.
* Internal: Prefer is_readable() and is_file() to file_exists().
* PrismJS 1.24.1.

Changes in 4.8.7 (30 May 2021)

* High priority maintenance release to address functionality and setup issues
  discovered after 4.8.6 release.
* Fixed: Users panel throws error due to missing DB prefix (thanks, prbt2016).
* Removed: Database user GRANT check during initial setup, which broke some
  installations.
* Changed: Context check priority in tags.

Changes in 4.8.6 (28 May 2021)

* DO NOT USE IN PRODUCTION - issues discovered after release, use 4.8.7 instead.
* Maintenance release with bug fixes.
* Fixed: Regression in override form usage in lists (thanks, Christian Rapp).
* Fixed: Undefined $article warning when accessing non-existent articles.
* Fixed: Error with <txp:output_form /> tag on empty forms (thanks, Adi).
* Fixed: Low-privilege users can save immediately after duplicating articles.
* Added: Latest text translations. Thank you to all our translators.
* Added: 'id' attribute to <txp:if_different /> tag.
* Added: 'db' option to the global 'escape' attribute.
* Added: Option to create database during setup.
* Added: Permission (grants) verification during setup.
* Changed: 'Assign sections' from Themes panel only selects its own sections.
* Changed: <txp:variable trim> trims its own output (thanks, cara-tm).
* Changed: <txp:link_to_next/prev> can return URL or container.
* Changed: <txp:page_url> and <txp:if_request> tags are more flexible.
* Changed: Boost power of <txp:article(_custom)> grouping by date.
* Changed: Articles can be filtered by keywords more easily.
* Changed: No Edit options in Write panel without appropriate privileges.